--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
     "autoprefixer": "10.4.14",
+    "iconsax-react": "^0.0.8",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
